# egui_timeline

./: Cargo.toml  LICENSE-MIT  README.md
.github/workflows/: ci.yml
src/: lib.rs  playhead.rs  ruler.rs
